# FFMPEGAndroidPrebuilt

./: CMakeLists.txt  README.md
arm64-v8a/include/: config.h
armeabi-v7a/include/: config.h
x86/include/: config.h
x86_64/include/: config.h
